Refactorings
Mainly https://docs.openrewrite.org/recipes/java/logging/slf4j/log4jtoslf4j
Then cleanup of Sonar smells of classes in edit mode (no general smell fix)